# GADTRemover

./: .jenkins_script.sh  .travis.yml  Examples.hs  GADTCreator.hs  GADTRemover.hs  PatternMatching.hs  README.md  RetrieveCasts.hs  ToHaskell.hs  ToLambdaProlog.hs  ezyang_patsyn_example.hs  stack-7.10.yaml  stack-lts-2.yaml  stack-lts-3.yaml  stack.yaml  validate
CastChallenge/: ADT2.hs  ADT3.hs  Busted_Vec_manually_modified.hs  DeferredErrors.hs  GADT-CastChallenge.cabal  GADT2.hs  List_Examples.hs  Main.hs  OCamlExample.ml  ProblemCases.hs  RedBlackTree.hs  Test2.hs  TypeCase.hs  TypeableMagic.hs  Vec.hs  Yoneda.hs
CastChallenge/Feldspar/: ADT1.hs  ADT2.hs  GADT.hs  Hint.hs  InterpADT.hs
GADTRemover/: DataType.hs  Examples.hs  FromTypeSystemToHaskell.hs  GADTCreator.hs  GADTRemover.cabal  GADTRemover.hs  PatternMatching.hs  ResolutionAndStatic.hs  ToHaskell.hs  ToLambdaProlog.hs  TypeSystem.hs  UpToConsistency.hs  queries.txt
GADT_CastChallenge/: .travis.yml  ADT1.hs  ADT2.hs  ADT3.hs  ADT_Feldspar.hs  ADT_Feldspar2.hs  GADT-CastChallenge.cabal  GADT.hs  GADT1.hs  GADT2.hs  GADT3.hs  GADT_Feldspar.hs  List_Examples.hs  Main.hs  MinimalTypeRep.hs  MinimalTypeRep2.hs  ProblemCases.hs  RedBlackTree.hs  Test1.hs  Test2.hs  Test3.hs  TimTypeCase.hs  TypeCase.hs
GADT_CastChallenge/Feldspar/: ADT1.hs  ADT2.hs  Benchmark.hs  GADT.hs  Hint.hs  InterpADT.hs  InterpGADT.hs  Test.hs  pmatch.scm  translator.ss
GADT_CastChallenge/Scratch/: TypeCase.hs
Remover2/: Ghostbuster.cabal  stack.yaml
Remover2/examples/: DataHashMap.hs  DataMap.hs  MiniFeldspar.hs  Vec.hs
Remover2/src/: Ghostbuster.hs  Main.hs
Remover2/src/Ghostbuster/: Ambiguity.hs  CodeGen.hs  Core.hs  Error.hs  Interp.hs  KindCheck.hs  LowerDicts.hs  Showable.hs  TypeCheck.hs  TypeCheck1.hs  Types.hs  Utils.hs
Remover2/src/Ghostbuster/CodeGen/: Base.hs  DDef.hs  Exp.hs  Prog.hs  VDef.hs
Remover2/src/Ghostbuster/Examples/: Feldspar.hs  Tiny.hs
Remover2/src/Ghostbuster/Parser/: Prog.hs  test.hs
Remover2/tests/: Main.hs
Remover2/tests/Issues/: Issue13.hs
Remover2/tool/: Main.hs
SurveyScripts/: CompileBusted.hs  ConnectedDDefs.hs  GrabNewestPerPackage.hs  Makefile  README.md  SurveyScripts.cabal  UntarFiles.hs  jenkins.sh
