name:                   GADT-CastChallenge
version:                0.1.0.0
author:                 Trevor L. McDonell
maintainer:             tmcdonell@cse.unsw.edu.au
build-type:             Simple
cabal-version:          >=1.10

executable GADT-CastChallenge
  default-language:     Haskell2010
  main-is:              Main.hs
  other-modules:        GADT ADT1 ADT2

  build-depends:
        base            >=4.7 && < 4.9

-- vim: nospell

