name:                   GADT-CastChallenge
version:                0.1.0.0
author:                 Trevor L. McDonell
maintainer:             tmcdonell@cse.unsw.edu.au
build-type:             Simple
cabal-version:          >=1.10

executable GADT-CastChallenge
  default-language:     Haskell2010
  main-is:              Main.hs
  other-modules:        GADT2 ADT2 Test2
                        GADT3 ADT3 Test3
                        ADT_Feldspar ADT_Feldspar2 GADT_Feldspar

  build-depends:
      base              >=4.7 && < 4.9
    , wl-pprint         >= 1.2

-- vim: nospell
