name:                   GADT-CastChallenge
version:                0.1.0.0
author:                 Trevor L. McDonell
maintainer:             tmcdonell@cse.unsw.edu.au
build-type:             Simple
cabal-version:          >=1.10

library
  default-language:     Haskell2010
  exposed-modules:      GADT2 ADT2 Test2
                        GADT3 ADT3 Test3
                        Feldspar.GADT Feldspar.ADT1 Feldspar.ADT2
                        Typecase TypeableMagic
                        List_Examples
  build-depends:
      base              >= 4.7 && < 4.9
    , wl-pprint         >= 1.2
    , ghc-prim

executable GADT-CastChallenge
  default-language:     Haskell2010
  main-is:              Main.hs
  build-depends:        GADT-CastChallenge
  build-depends:
      base              >= 4.7 && < 4.9
    , wl-pprint         >= 1.2
    , ghc-prim

-- vim: nospell
